--- a/index.html
+++ b/index.html
@@ -6,14 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- styles -->
     <link rel="stylesheet" href="./frontend/dist/styles/app.css">
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./frontend/dist/aseets/favicon/favicon.png" type="image/x-icon">
     <!-- fontawesome library -->
     <script src="https://kit.fontawesome.com/6e358658ed.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <!-- foundation css -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.4/dist/css/foundation.min.css" crossorigin="anonymous">
+    <title>NeoraUI | PDP</title>
 </head>
 <body>
 
-    <!-- write some coad pls -->
 
+    
+
+    <!-- jQuery (foundation dependency) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!-- foundation scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.4/dist/js/foundation.min.js" crossorigin="anonymous"></script>
+    <!-- custom scripts -->
     <script src="./frontend/dist/scripts/app.js"></script>
 </body>
 </html>
